# research-team

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yaml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
.husky/: pre-commit
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  db.py  logger.py  main.py  pyproject.toml  schema.sql  utils.py
api/routers/: admin.py  auth_token.py  bug_report.py  contact.py  cron_summary.py  feed.py  follows.py  grants.py  groups.py  linkedin_auth.py  mailing_list.py  messages.py  profile_picture.py  resume.py  users.py  vector_store.py  wishlist.py
api/services/: vector_utility.py
api/tests/: conftest.py  test_auth.py  test_grants.py  test_users.py
crons/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lambdas/add-user-db/: README.md  lambda_function.py
lambdas/link-provider/: lambda_function.py
terraform/: .terraform.lock.hcl  README.md  api_gateway.tf  cloudfront.tf  cognito.tf  dsql.tf  ecr.tf  glue.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  s3vectors.tf  terraform.tfvars.example  variables.tf
ui/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ui/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
ui/components/: AcademicStatusPicker.tsx  AttachmentChip.tsx  AttachmentPickerButton.tsx  Avatar.tsx  ChatDock.tsx  Community.tsx  Contact.tsx  Container.tsx  DiscoverySearchPanel.tsx  Errormessage.tsx  FAQS.tsx  Features.tsx  Footer.tsx  GrantPreview.tsx  GrantSummaryCard.tsx  Hero.tsx  Impact.tsx  Logo.tsx  Navbar.tsx  NextImageWrapper.tsx  NotFound.tsx  PageHeader.tsx  Pagination.tsx  PlatformOverview.tsx  ProfileCard.tsx  ProfileDropdown.tsx  ProfilePicture.tsx  SectionHeader.tsx  SidebarLayout.tsx  Testimonials.tsx  ToastContainer.tsx  ViewModeTabs.tsx
ui/data/: global.ts  profile.ts
ui/lib/: apiAuth.ts  attachmentUtils.ts  ensureUserProfile.ts  searchHighlight.ts
ui/store/: useAuthStore.ts  useCollaborator.ts  useFeedStore.ts  useGrantStore.ts  useGroupStore.ts  useProfileStore.ts  useThemeStore.ts  useToastStore.ts  useUnreadStore.ts  useWishListStore.ts
(+42 files in other folders)
