[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "research-team-cron"
version = "0.0.1"
requires-python = "==3.9.6"

dependencies = [
    "boto3==1.40.61",
    "asyncpg==0.30.0",
    "httpx==0.27.0",
    "tenacity==9.1.2",
]

[dependency-groups]
dev = [
    "python-dotenv==1.2.1",
    "ruff>=0.14.11",
    "mypy-boto3-bedrock-runtime==1.42.42",
    "mypy-boto3-s3vectors==1.42.3",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# E = pycodestyle errors, W = pycodestyle warnings, F = pyflakes, I = isort (imports)
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"